# simulador-controlador

./: .gitignore  AGENTS.md  README.md  Todos.md  build.bat  config.yaml  main.py  process.py  process.yaml  pyproject.toml  requirements.txt  simulador-controlador.py  simulador_controlador.py  simulador_controlador.spec  version_info.txt
